public/src/css/style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Space Mono', monospace;
    scroll-behavior: smooth;
}

.intro {
    background-image: url('../assets/images/spacebg.jpeg');
    height: 100vh;
}

.rules {
    /* background-image: url('../assets/images/spacebg.jpeg'); */
    flex-direction: column;
    text-align: left;
    max-width: 1500px;
    margin: 0 auto;
    padding: 100px 0;
    left: 32%;
}

.instructions {
    background-image: url('../assets/images/spacebg.jpeg');
    color: white;
}

.container {
    min-height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

h1 {
    color: white;
    left: 0;
    line-height: 200px;
    margin-top: -100px;
    position: absolute;
    text-align: center;
    top: 40%;
    width: 100%;
    font-size: 600%;
    letter-spacing: 25px;
}

.button {
    background-color: navy;
    border: solid;
    border-radius: 12px;
    color: white;
    width: 14%;
    top: 50%;
    padding: 15px 15px;
    text-align: center;
    display: inline-block;
    font-size: 17px;
    margin: 4px 2px;
    cursor: pointer;
    position: absolute;
    text-decoration: none;
}

.playgame {
    left: 54%;
}

.intro a:hover {
    background-color: white;
    color: black;
    transition: 0.6s;
}

.heading {
    color: white;
    left: 0;
    line-height: 200px;
    margin-top: -100px;
    position: absolute;
    text-align: center;
    top: 130%;
    width: 100%;
    font-size: 50%;
}

.rules h4 {
    bottom: 700px;
}

